# simple-digital-filter

./: CMakeLists.txt  DigitalFilter.cpp  DigitalFilter.hpp  README.md  main.cpp
